feat(core): add unified exception handling, signature verification
- Introduced global exception handler with detailed validation error responses
- Defined unified status code enum `Code` for system and business errors
- Enhanced `ApiResponse` to support structured error field and traceId
- Implemented `@Signature` annotation and high-performance `SignInterceptor`
- Added `AnnotationUtils` for reusable, cached annotation retrieval
- Enabled traceId injection via filter for log tracking